--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,12 @@ body {
 }
 
 .split.left img {
-    width: 280px;
+    display: block;
+    max-width: 280px;
+}
+
+.split.left #img-div #img-caption {
+    display: none;
 }
 
 .split.left h1 {
@@ -55,6 +60,7 @@ body {
     flex-direction: column;
     overflow-y: auto;
     padding: 20px 60px 20px 20px;
+    margin: 20px 0;
 }
 
 .split.right p {
